<resources>
    <string name="app_name">codeBlocksProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="startButtonText">START</string>
    <string name="blocksButtonText">BLOCKS</string>
    <string name="closeButtonText">CLOSE</string>
    <string name="contentDescription">image</string>
    <string name="themeText">themes</string>
    <string name="chocolateThemeText">chocolate theme</string>
    <string name="pinkThemeText">pink theme</string>
    <string name="spaceThemeText">space theme</string>
    <string name="monochromeThemeText">monochrome theme</string>
    <string name="shrekThemeText">shrek theme</string>
    <string name="consoleText">waiting…</string>

    <string name="varText">var</string>
    <string name="nameTextHint">name</string>
    <string name="valueTextHint">value</string>
    <string name="equalText">=</string>
    <string name="transparentString"> </string>
    <string name="endProgramText">End</string>
    <string name="startProgramText">Start program</string>
    <string name="beginCycleText">begin</string>
    <string name="endCycleText">end</string>
    <string name="conditionHint">condition</string>
    <string name="expressionHint">expression</string>
    <string name="whileBlockText">while</string>
    <string name="ifBlockText">if</string>
    <string name="printBlockText">print</string>
    <string name="inputBlockText">input</string>
    <string name="elseBlockText">else</string>
    <string name="arrayInit">:  array of</string>
    <string name="arrayLengthHint">length</string>

    <string name="initializationButton">INITIALIZATION</string>
    <string name="whileButton">WHILE</string>
    <string name="ifButton">IF</string>
    <string name="outputButton">OUTPUT</string>
    <string name="assignmentButton">ASSIGNMENT</string>
    <string name="arrayButton">ARRAY</string>

    <string name="codingText">coding…</string>
    <string name="backToMenuText">to menu</string>
    <string name="clearAllText">clear all</string>

    <string name="blocksCodingText">blocks coding</string>
    <string name="textCodingText">text coding</string>
    <string name="sixDoubleOne">611</string>

    <string name="clearToast">everything is deleted</string>
    <string name="JSON_error">file is empty!</string>
    <string name="hz">хуй знает че не работет, ебись сам</string>

    <string name="correctSymbols">0123456789_abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ+-*/,(=!)&gt;&lt;[]</string>
    <string name="correctSymbolsForName">0123456789_abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ][+-</string>
    <string name="correctSymbolsForFile">0123456789_abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-</string>

    <string name="autoFillFileName">NewFile</string>
    <string name="fileNameHint">file name</string>
    <string name="saveFileText">save</string>
    <string name="openFileText">open</string>

    <string name="correctSymbols">0123456789_abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ+-*/,(=!)&gt;&lt;[]</string>
    <string name="correctSymbolsForName">0123456789_abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ][+-</string>
    <string name="hz">хуй знает че не работет, ебись сам</string>

    <string name="stopButton">stop</string>
</resources>