<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:parentTag="android.widget.LinearLayout">

    <TextView
        android:id="@+id/initText"
        style="@style/blocksTextStyle"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginStart="@dimen/blocksMargin"
        android:layout_marginEnd="@dimen/blocksMargin"
        android:background="@color/transparent"
        android:text="@string/varText"
        android:textSize="@dimen/blocksTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nameText"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />


    <TextView
        android:id="@+id/nameText"
        style="@style/blocksTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"

        android:layout_marginStart="@dimen/blocksMargin"
        android:layout_marginEnd="@dimen/blocksMargin"
        android:autofillHints=""
        android:background="@drawable/textviews_background"
        android:hint="@string/nameTextHint"
        android:padding="2dp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/array"
        app:layout_constraintStart_toEndOf="@+id/initText"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/varName"
        style="@style/blocksTextStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:autofillHints=""
        android:background="@drawable/textviews_background"
        android:digits="@string/correctSymbolsForName"
        android:hint="@string/nameTextHint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="2dp"
        android:singleLine="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/nameText"
        app:layout_constraintEnd_toEndOf="@+id/nameText"
        app:layout_constraintStart_toStartOf="@+id/nameText"
        app:layout_constraintTop_toTopOf="@+id/nameText"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/array"
        style="@style/blocksTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/blocksMargin"
        android:padding="2dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/arrayInit"
        android:textSize="@dimen/blocksTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lengthText"
        app:layout_constraintStart_toEndOf="@+id/nameText"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/lengthText"
        style="@style/blocksTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginEnd="@dimen/blocksMargin"
        android:autofillHints=""
        android:background="@drawable/textviews_background"
        android:hint="@string/arrayLengthHint"
        android:padding="2dp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/array"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


    <EditText
        android:id="@+id/varLength"
        style="@style/blocksTextStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:autofillHints=""
        android:background="@drawable/textviews_background"
        android:digits="0123456789_abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ+-*/,()"
        android:hint="@string/arrayLengthHint"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="2dp"
        android:singleLine="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/lengthText"
        app:layout_constraintEnd_toEndOf="@+id/lengthText"
        app:layout_constraintStart_toStartOf="@+id/lengthText"
        app:layout_constraintTop_toTopOf="@+id/lengthText"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

</merge>