<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/blocks_fragment"
    android:translationZ="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">


        <ImageView
            android:id="@+id/buttonBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/chocolateBottomButtonsColor"
            android:contentDescription="@string/contentDescription"
            app:layout_constraintBottom_toBottomOf="@+id/closeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/closeButton"
            app:layout_constraintTop_toTopOf="@+id/closeButton"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:color/transparent" />

        <Button
            android:id="@+id/closeButton"
            style="@style/bottomButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/bottomButtonsSize"
            android:background="@drawable/close_button_background"
            android:text="@string/closeButtonText"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stop_program_button_background"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="236dp" />

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/chocolateConsoleColor"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/buttonBackground">

            <TextView
                android:id="@+id/consoleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/chocolateConsoleColor"
                android:fontFamily="@font/courier_prime"
                android:padding="10dp"
                android:text="@string/transparentString"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
        </ScrollView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/drawerButtonWidth" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/stop_program_button_background"
            android:text="@string/transparentString"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/buttonIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:clickable="false"
            android:contentDescription="@string/contentDescription"
            app:layout_constraintBottom_toBottomOf="@+id/stopButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/stopButton"
            app:layout_constraintTop_toTopOf="@+id/stopButton"
            app:srcCompat="@drawable/stop_button_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>